<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:layout_alignTop="@+id/imageView"
        android:text="@string/text_status"
        android:textSize="26sp" />

    <Button
        android:id="@+id/btnFadeIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnFadeOut"
        android:layout_alignParentStart="true"
        android:layout_marginTop="220dp"
        android:text="@string/fade_in" />

    <Button
        android:id="@+id/btnFadeOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textStatus"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:text="@string/fade_out" />

    <Button
        android:id="@+id/btnFadeInOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignEnd="@+id/btnFadeOut"
        android:layout_marginTop="220dp"
        android:text="@string/fade_in_out" />

    <Button
        android:id="@+id/btnZoomIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btnFadeIn"
        android:layout_marginTop="80dp"
        android:text="@string/zoom_in" />

    <Button
        android:id="@+id/btnZoomOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnFadeInOut"
        android:layout_marginTop="80dp"
        android:text="@string/zoom_out" />

    <Button
        android:id="@+id/btnLeftRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left_right"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btnZoomIn"
        android:layout_marginTop="80dp"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/btnRightLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp"
        android:text="@string/right_left" />

    <Button
        android:id="@+id/btnTopBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnZoomOut"
        android:layout_marginTop="80dp"
        android:text="@string/top_bot" />

    <Button
        android:id="@+id/btnBounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btnLeftRight"
        android:layout_marginTop="80dp"
        android:text="@string/bounce" />

    <Button
        android:id="@+id/btnFlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnTopBottom"
        android:layout_marginTop="80dp"
        android:text="@string/flash" />

    <Button
        android:id="@+id/btnRotateLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btnBounce"
        android:layout_marginTop="80dp"
        android:text="@string/rotate_left" />

    <Button
        android:id="@+id/btnRotateRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnFlash"
        android:layout_marginTop="80dp"
        android:text="@string/rotate_right" />

    <SeekBar
        android:id="@+id/seekBarSpeed"
        android:layout_width="203dp"
        android:layout_height="36dp"
        android:layout_alignTop="@+id/btnRotateLeft"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp"
        android:max="5000" />

    <TextView
        android:id="@+id/textSeekerSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnRotateRight"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:text="@string/seeker_bar_speed"/>

</RelativeLayout>